peering.tf
resource "aws_vpc_peering_connection" "foo" {
#   peer_owner_id = var.peer_owner_id
  peer_vpc_id   = aws_vpc.main.id
  vpc_id        = var.DEFAULT_VPC_ID
}
